--- a/package.json
+++ b/package.json
@@ -21,5 +21,8 @@
   "devDependencies": {
     "prettier-plugin-tailwindcss": "^0.2.0",
     "tailwindcss": "^3.2.4"
+  },
+  "dependencies": {
+    "i": "^0.3.7"
   }
 }
